test/1.2/errors/T_ETREC_layout.dml
/*
  © 2021 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;
// Currently gives an ICE (maximum recursion depth exceeded), SIMICS-10196
typedef layout "little-endian" {
    /// ERROR ETREC
    x_t x;
} x_t;
